WIP, but added some white space under the Bokeh maps as it was bugging me too much. App styling will likely change this week though.

--- a/code/flaskr/static/css/bootstrap-theme.css
+++ b/code/flaskr/static/css/bootstrap-theme.css
@@ -605,4 +605,9 @@ fieldset[disabled] .btn-danger.active {
   margin-top: 100px;
 }
 
+#resp-time-map {
+  margin-top: 0px;
+  margin-bottom: 25px;
+}
+
 /*# sourceMappingURL=bootstrap-theme.css.map */
